syntax = "proto3";

package api;

option go_package = "proto/api";

message UploadRequest {
  string content_type = 1;
  bytes blob = 2;
}

message UploadResponse {
  string key = 1;
  int64 timestamp = 2;
}

message Object {
  string key = 1;
  string content_type = 2;
  int64 timestamp = 3;
}

message ListResponse {
  repeated Object objects = 1;
  string continuation_token = 2;
}

message InitUserRequest {
  string name = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
}

message File {
  string path = 1;
  int64 timestamp = 2;
  int32 size = 3;
  int32 width = 4;
  int32 height = 5;
}

message GetFileResponse {
  string key = 1;
  string content_type = 2;
  repeated File files = 3;
}

message DeleteFileRequest {
  int64 timestamp = 1;
}

message DeleteFileResponse {
  int64 timestamp = 1;
}
